# vector

./: AutoTest.cpp  AutoTest.h  CMakeLists.txt  CRat.cpp  CRat.h  Header.h  README.md  Source.cpp  VectorCrat.vcxproj  VectorCrat.vcxproj.filters  descrip.cpp
